<resources>
    <string name="app_name">RinenggaApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="pawulang">Pawulang</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nis">NIS</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="start">Mulai</string>
    <string name="cancel">Batal</string>
    <string name="ubah">Ubah</string>
    <string name="no_hp">No. Hp</string>
    <string name="full_name">Full Name</string>
    <string name="ubah_akun">Ubah Akun</string>
    <string name="imageurlprofile">ImageUrlProfile</string>
    <string name="imageurlprofilebuttonadd">ImageUrlProfileButtonAdd</string>
    <string name="sugeng_rawuh">Sugeng Rawuh</string>
    <string name="setelah_anda_menyelesaikan_pembahasan_materi_anda_akan_diberikan_kesepatan_untuk_menguji_kompetensi_anda">Setelah anda menyelesaikan pembahasan materi anda akan diberikan kesepatan untuk menguji kompetensi anda!!</string>
    <string name="semua_soal_disini_berupa_pilihan_ganda_nanda_akan_mendapatkan_nilai_di_akhir_sesi">Semua soal disini berupa pilihan ganda \nAnda akan mendapatkan nilai di akhir sesi</string>
    <string name="x_ips_2">X IPS 2</string>
    <string name="lanjut">Lanjut</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="confirm_password_baru">Confirm Password Baru</string>
    <string name="fullName">Nama Lengkap</string>
    <string name="password_confirm">Konfirmasi Password</string>
    <string name="textview">textview</string>
    <string name="pawulang_telah_diselesaikan">Pawulang telah diselesaikan</string>
    <string name="result_score">90</string>
    <string name="anda_mendapatkan_nilai">Anda mendapatkan nilai :</string>
    <string name="selamat">Selamat!!</string>
    <string name="total_questions">Total Questions :</string>
    <string name="na">NA</string>
    <string name="start_assignment">Mulai Pawulang</string>
    <string name="sugeng_rawuh_name">Sugeng Rawuh!!\n username</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="selesai">Selesai</string>
    <string name="example">example</string>
    <string name="title">ini judul</string>
    <string name="profilepicture">profilePicture</string>
    <string name="name">user Fullname</string>
    <string name="nis_detail">12345678</string>
    <string name="akun">Akun</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="belajar_basa_rinengga_dengan_mudah">Belajar Basa Rinengga dengan mudah</string>
    <string name="skip">Lewati</string>
    <string name="next">Lanjut</string>
    <string name="tambah_pengalaman_belajar_dengan_modul_yang_diberikan">Tambah pengalaman belajar dengan modul yang diberikan</string>
    <string name="meningkatkan_kemampuan_dan_ketrampilan_mulai_menjelajah_sebanyak_yang_diinginkan">Meningkatkan kemampuan dan ketrampilan, mulai menjelajah sebanyak yang diinginkan!</string>
    <string name="finish">Selesai</string>
    <string name="old_password">Password Lama</string>
    <string name="tuladha">Tuladha</string>
</resources>