<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/secondary_10"
    tools:context=".view.assignment.AssignmentIntroFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugeng_rawuh"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setelah_anda_menyelesaikan_pembahasan_materi_anda_akan_diberikan_kesepatan_untuk_menguji_kompetensi_anda"
            android:textSize="20sp"
            android:layout_marginVertical="20dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="32dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semua_soal_disini_berupa_pilihan_ganda_nanda_akan_mendapatkan_nilai_di_akhir_sesi"
            android:textSize="19sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="32dp"/>

        <Spinner
            android:id="@+id/input_class_dropdown"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:layout_marginVertical="32dp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginHorizontal="128dp" />


        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/lanjut"
            android:textSize="20sp"
            android:textAllCaps="false"/>
    </LinearLayout>

