<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.profile.EditProfileActivity">

    <TextView
        android:id="@+id/change_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubah_akun"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginVertical="32dp"
        app:layout_constraintBottom_toTopOf="@id/image_profile_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <FrameLayout
        android:id="@+id/image_profile_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/fullName_input_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_profile_title">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/baseline_account_circle_24"
            android:contentDescription="@string/imageurlprofile" />

    </FrameLayout>


    <EditText
        android:id="@+id/fullName_input_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/full_name"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"

        app:layout_constraintBottom_toTopOf="@+id/nis_input_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile_change"
        app:layout_constraintVertical_bias="0.5"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/nis_input_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/nis"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"

        app:layout_constraintBottom_toTopOf="@id/email_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullName_input_edit"
        android:autofillHints=""
        android:inputType="number" />

    <EditText
        android:id="@+id/email_change"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"

        app:layout_constraintBottom_toTopOf="@id/no_hp_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nis_input_edit"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/no_hp_change"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/no_hp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toTopOf="@id/change_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_change"
        android:autofillHints=""
        android:inputType="number|phone" />

    <Button
        android:id="@+id/change_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubah"
        android:layout_marginVertical="32dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_hp_change" />


</androidx.constraintlayout.widget.ConstraintLayout>