<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".view.auth.LoginActivity">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginVertical="24dp"
        />

    <LinearLayout
        android:id="@+id/no_account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/loginTitle"
        android:gravity="center_horizontal"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:textSize="20sp"
            android:textColor="@color/neutral_60"
            />

        <TextView
            android:id="@+id/register_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <EditText
        android:id="@+id/email_input_login"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:textSize="17sp"
        android:textColor="@color/primary_80"
        android:background="@drawable/edit_text_background"
        android:layout_below="@id/no_account_layout"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:autofillHints="abcde@gmail.com"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_input_login"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textSize="17sp"
        android:textColor="@color/primary_80"
        android:background="@drawable/edit_text_background"
        android:layout_below="@id/email_input_login"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:drawableEnd="@drawable/baseline_visibility_off_24"
        android:autofillHints="**********"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/login"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        android:layout_below="@id/password_input_login"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="64dp"/>

</RelativeLayout>