<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_10"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/account_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:src="@drawable/rounded_button"
            android:contentDescription="@string/profilepicture" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintBottom_toTopOf="@+id/profile_nis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/profile_nis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nis_detail"
                app:layout_constraintBottom_toTopOf="@+id/account_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintTop_toBottomOf="@id/profile_name" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/akun"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/settings_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_title"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:paddingHorizontal="32dp"
            android:drawablePadding="8dp"
            android:text="@string/edit_profile"
            android:background="@color/secondary_20"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/baseline_edit_24" />

        <TextView
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:paddingHorizontal="32dp"
            android:drawablePadding="8dp"
            android:text="@string/ubah_password"
            android:background="@color/secondary_20"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/baseline_lock_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawablePadding="16dp"
        android:text="@string/logout"
        android:paddingHorizontal="32dp"
        android:textColor="@color/error_60"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/secondary_20"
        app:drawableStartCompat="@drawable/baseline_logout_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>