<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rinenggaapp.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.rinenggaapp.view.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.rinenggaapp.view.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/assignmentDetailFragment"
        android:name="com.example.rinenggaapp.view.assignment.AssignmentDetailFragment"
        android:label="fragment_assignment_detail"
        tools:layout="@layout/fragment_assignment_detail" >
        <action
            android:id="@+id/action_assignmentDetailFragment_to_assignmentFragment"
            app:destination="@id/assignmentFragment" />
    </fragment>
    <fragment
        android:id="@+id/assignmentFragment"
        android:name="com.example.rinenggaapp.view.assignment.AssignmentFragment"
        android:label="fragment_assignment"
        tools:layout="@layout/fragment_assignment" >
        <action
            android:id="@+id/action_assignmentFragment_to_assignmentResultFragment"
            app:destination="@id/assignmentResultFragment" />
    </fragment>
    <fragment
        android:id="@+id/assignmentResultFragment"
        android:name="com.example.rinenggaapp.view.assignment.AssignmentResultFragment"
        android:label="fragment_assignment_result"
        tools:layout="@layout/fragment_assignment_result" />
</navigation>